--- a/PopularMoviesApp/app/build.gradle
+++ b/PopularMoviesApp/app/build.gradle
@@ -10,7 +10,7 @@ android {
     compileSdkVersion 28
     defaultConfig {
         applicationId "br.com.udacity.victorcs.popularmoviesapp"
-        minSdkVersion 15
+        minSdkVersion 16
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
@@ -30,6 +30,7 @@ android {
             buildConfigField 'String', 'API_TOKEN', '""'
             testCoverageEnabled true
         }
+
     }
     compileOptions {
         sourceCompatibility = '1.8'
@@ -54,6 +55,7 @@ dependencies {
 
     //DI
     implementation dependencies.dagger
+    implementation dependencies.daggerSupport
     annotationProcessor dependencies.daggerCompiler
 
     //RxKotlin
